--- a/Portfólio profissional Nathalye Santos Silva/index.html
+++ b/Portfólio profissional Nathalye Santos Silva/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Portfólio</title>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -38,8 +39,10 @@
     <section id="sobre" class="sobre">
         <h2 class="sobre-titulo">Sobre Mim</h2>
         <div class="sobre-caixa">
-            <p class="sobre-paragrafo">Tenho grande interesse em tecnologia e curiosidade em aprender novas linguagens de programação, frameworks e diferentes formas de desenvolver soluções criativas.
-Meu objetivo é crescer na área de desenvolvimento, adquirindo experiência e construindo soluções que façam a diferença.
+            <p class="sobre-paragrafo">Tenho grande interesse em tecnologia e curiosidade em aprender novas linguagens
+                de programação e diferentes formas de desenvolver soluções criativas.
+                Meu objetivo é crescer na área de desenvolvimento, adquirindo experiência e construindo soluções que
+                façam a diferença.
             </p>
         </div>
     </section>
@@ -53,14 +56,18 @@ Meu objetivo é crescer na área de desenvolvimento, adquirindo experiência e c
                 <img src="imagens/calculadora.png" alt="Projeto 1" class="projetos-imagem">
                 <div class="caixa-textos-projeto">
                     <h3 class="info-projetos">Calculadora</h3>
-                    <p class="paragrafo-projetos">Este projeto é uma calculadora interativa que realiza as quatro operações matemáticas básicas (adição, subtração, multiplicação e divisão). O desenvolvimento da aplicação foi feito utilizando HTML para a estrutura, CSS para a estilização. Com um design moderno, uma paleta de cores personalizada  e JavaScript para toda a lógica de funcionamento e a manipulação da interface.</p>
+                    <p class="paragrafo-projetos">Este projeto é uma calculadora interativa que realiza as quatro
+                        operações matemáticas básicas (adição, subtração, multiplicação e divisão). O desenvolvimento da
+                        aplicação foi feito utilizando HTML para a estrutura, CSS para a estilização. Com um design
+                        moderno, uma paleta de cores personalizada e JavaScript para toda a lógica de funcionamento e a
+                        manipulação da interface.</p>
                 </div>
             </div>
 
             <div class="projetos-card">
                 <img src="imagens/projeto2.png" alt="Projeto 2" class="projetos-imagem">
                 <div class="caixa-textos-projeto">
-                    <h3 class="info-projetos">Página de viagens</h3>
+                    <h3 class="info-projetos">Em andamento</h3>
                     <p class="paragrafo-projetos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus,
                         veniam debitis non deleniti sit dolorum suscipit adipisci qui voluptatem! Officiis deserunt
                         deleniti dolore minima fugit numquam veniam quaerat distinctio exercitationem.</p>
@@ -70,15 +77,46 @@ Meu objetivo é crescer na área de desenvolvimento, adquirindo experiência e c
             <div class="projetos-card">
                 <img src="imagens/projeto3.png" alt="Projeto 3" class="projetos-imagem">
                 <div class="caixa-textos-projeto">
-                    <h3 class="info-projetos">Microsoft</h3>
+                    <h3 class="info-projetos">Em andamento</h3>
                     <p class="paragrafo-projetos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus,
                         veniam debitis non deleniti sit dolorum suscipit adipisci qui voluptatem! Officiis deserunt
                         deleniti dolore minima fugit numquam veniam quaerat distinctio exercitationem.</p>
                 </div>
             </div>
 
-            
 
+
+        </div>
+    
+    <section id="curriculo" class="curriculo">
+        <h2 class="curriculo-titulo">Currículo</h2>
+        <div class="curriculo-caixa">
+            <h3>Formação</h3>
+            <p>Análise e Desenvolvimento de Sistemas - Faculdade XYZ (2023 - em andamento)</p>
+
+            <h3>Experiência</h3>
+            <p>A ser preenchido</p>
+
+            <h3>Habilidades</h3>
+            <ul>
+                <li>A ser preenchido</li>
+
+
+            </ul>
+
+            <a href="imagens/Nathalye Santos Silva.png" target="_blank" class="botao-form">Baixar Currículo</a>
+        </div>
+    </section>
+
+
+    <section id="certificados" class="certificados">
+        <h2 class="certificados-titulo">Certificados</h2>
+        <div class="certificados-caixa">
+            <ul>
+                <li>Fundamentos da Inteligência Artificial (2025) - SENAI</li>
+                <li>Espanhol - Intermediário (2023) - E.E. Prof. Firmino Ladeira</li>
+                <li>Inglês - Cursando (2025) - E.E. Prof. Firmino Ladeira</li>
+            </ul>
         </div>
     </section>
 
@@ -94,9 +132,18 @@ Meu objetivo é crescer na área de desenvolvimento, adquirindo experiência e c
                 <textarea placeholder="Digite sua mensagem" rows="6" id="mensagem" class="campo-form"></textarea>
             </div>
 
-
             <button type="submit" class="botao-form">Enviar WhatsApp</button>
         </form>
+
+        <div class="github-link">
+    <p>Para mais informações sobre os projetos, acesse:<br>
+        <a href="https://github.com/Nathy005" target="_blank">
+            <i class='bx bxl-github'></i> GitHub
+        </a>
+    </p>
+</div>
+
+
     </section>
 
     <script>
