--- a/Portfólio profissional Nathalye Santos Silva/index.html
+++ b/Portfólio profissional Nathalye Santos Silva/index.html
@@ -50,12 +50,10 @@ Meu objetivo é crescer na área de desenvolvimento, adquirindo experiência e c
 
 
             <div class="projetos-card">
-                <img src="imagens/projeto1.png" alt="Projeto 1" class="projetos-imagem">
+                <img src="imagens/calculadora.png" alt="Projeto 1" class="projetos-imagem">
                 <div class="caixa-textos-projeto">
-                    <h3 class="info-projetos">Loja de carros</h3>
-                    <p class="paragrafo-projetos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus,
-                        veniam debitis non deleniti sit dolorum suscipit adipisci qui voluptatem! Officiis deserunt
-                        deleniti dolore minima fugit numquam veniam quaerat distinctio exercitationem.</p>
+                    <h3 class="info-projetos">Calculadora</h3>
+                    <p class="paragrafo-projetos">Este projeto é uma calculadora interativa que realiza as quatro operações matemáticas básicas (adição, subtração, multiplicação e divisão). O desenvolvimento da aplicação foi feito utilizando HTML para a estrutura, CSS para a estilização. Com um design moderno, uma paleta de cores personalizada  e JavaScript para toda a lógica de funcionamento e a manipulação da interface.</p>
                 </div>
             </div>
 
@@ -85,7 +83,7 @@ Meu objetivo é crescer na área de desenvolvimento, adquirindo experiência e c
     </section>
 
     <section id="contatos" class="contatos">
-        <h2 class="contatos-titulo">Entre em contatos</h2>
+        <h2 class="contatos-titulo">Entre em contato</h2>
 
         <form class="formulario-contato" id="formulario" onsubmit="enviarWhats(event)">
             <div class="grupo-form">
