--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <h2 class="curriculo-titulo">Currículo</h2>
         <div class="curriculo-caixa">
             <h3>Formação</h3>
-            <p>Análise e Desenvolvimento de Sistemas - Faculdade XYZ (2023 - em andamento)</p>
+            <p>Análise e Desenvolvimento de Sistemas - Universidade de Mogi das Cruzes (2025 - Em andamento)</p>
 
             <h3>Experiência</h3>
             <p>A ser preenchido</p>
